<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="500dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="500dp"
        android:layout_marginBottom="100dp"
        app:cardBackgroundColor="@color/card_background_dark"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/register_title"
                style="@style/Theme.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvRegister"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image" />

            <LinearLayout
                android:id="@+id/linearLayoutTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_title">

                <TextView
                    android:id="@+id/firstname_tv"
                    style="@style/Theme.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tvFirstname" />

                <TextView
                    android:id="@+id/lastname_tv"
                    style="@style/Theme.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tvLastname" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutTv">

                <EditText
                    android:id="@+id/firstname_et"
                    style="@style/Theme.EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/etFirstname"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/lastname_et"
                    style="@style/Theme.EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/etLastname"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <TextView
                android:id="@+id/username_tv"
                style="@style/Theme.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvUsername"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutEt" />

            <EditText
                android:id="@+id/username_et"
                style="@style/Theme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etUsername"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_tv" />

            <TextView
                android:id="@+id/email_tv"
                style="@style/Theme.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_et" />

            <EditText
                android:id="@+id/email_et"
                style="@style/Theme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etEmail"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_tv" />


            <TextView
                android:id="@+id/password_tv"
                style="@style/Theme.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_et" />

            <EditText
                android:id="@+id/password_et"
                style="@style/Theme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etPassword"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_tv" />

            <TextView
                android:id="@+id/confirm_password_tv"
                style="@style/Theme.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvConfirmPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_et" />

            <EditText
                android:id="@+id/confirm_password_et"
                style="@style/Theme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etRetypePassword"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_password_tv" />

            <Button
                android:id="@+id/register_btn"
                style="@style/Theme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnRegister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_password_et" />

            <TextView
                android:id="@+id/already_registered_tv"
                style="@style/Theme.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_registered_tv"
                android:textColor="@color/dashboard_subtext_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>